--- a/src/components/console/console.css
+++ b/src/components/console/console.css
@@ -10,6 +10,7 @@
   padding: 35px 10px;
   overflow-y: scroll;
   transform: translate(-50%,-50%);
+  z-index: 1;
 }
 .console::-webkit-scrollbar{
   width: 5px;
